[package]
name = "klunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beef = "0.5.2"
chumsky = { git = "https://github.com/zesterer/chumsky", version = "1.0.0-alpha.6", features = ["label", "nightly"] }
comat = "0.1.3"
lerr = "0.1.5"
logos = "0.13.0"
